# ukitmata

./: .gitattributes  .gitignore  README.md  pyproject.toml
tests/: test_smoke.py
ukitmata/: __init__.py  config.py
ukitmata/api/: __init__.py  main.py
ukitmata/learning/: __init__.py  dataset.py  finetune.py
ukitmata/models/: __init__.py  htr.py  llm.py  vlm.py
ukitmata/pipeline/: __init__.py  detect.py  extract.py  preprocess.py
ukitmata/schemas/: __init__.py  registry.py
ukitmata/schemas/forms/: bir_2306.yaml  bir_2307.yaml
ukitmata/store/: __init__.py  db.py  files.py
ukitmata/ui/: __init__.py  app.py
